--- a/app-src/package.json
+++ b/app-src/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.9",
+    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "@fortawesome/react-fontawesome": "0.0.18",
     "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
     "react": "^16.3.0",
     "react-bootstrap": "0.32.1",
     "react-dom": "^16.3.0",
-    "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
