--- a/app-src/package.json
+++ b/app-src/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.0",
     "react-bootstrap": "0.32.1",
     "react-dom": "^16.3.0",
+    "react-interval": "^2.0.2",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
