--- a/app-src/package.json
+++ b/app-src/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.5",
-    "@fortawesome/fontawesome-free-brands": "^5.0.9",
-    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.18",
     "bootstrap": "^3.3.7",
-    "react": "^16.3.0",
+    "react": "^16.4.0",
     "react-bootstrap": "0.32.1",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.4.0",
     "react-interval": "^2.0.2",
-    "react-router": "^4.2.0",
+    "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
