--- a/app-src/package.json
+++ b/app-src/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-syntax-highlighter": "^15.4.3",
+    "react-websocket": "^2.1.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
