--- a/app-src/package.json
+++ b/app-src/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^17.0.43",
     "bootstrap": "^5.1.3",
     "clean-deep": "^3.4.0",
+    "jotai": "^1.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-interval": "^2.1.1",
     "react-json-to-table": "^0.1.7",
+    "react-query": "^3.34.19",
     "react-router": "^6.2.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
