--- a/app-src/package.json
+++ b/app-src/package.json
@@ -20,7 +20,7 @@
     "react-query": "^3.34.19",
     "react-scripts": "^5.0.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-websocket": "^2.1.0",
+    "react-use-websocket": "^3.0.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
