--- a/app-src/package.json
+++ b/app-src/package.json
@@ -20,14 +20,15 @@
     "react-query": "^3.34.19",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "react-use-websocket": "^3.0.0",
-    "typescript": "^4.6.3"
+    "react-use-websocket": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "engines": {
     "node": "^16.x"
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^9.6.0"
   }
 }
