--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Delete old sig-images
         uses: snok/container-retention-policy@v1
         with:
-          image-names: *sig
+          image-names: "*sig"
           cut-off: One month ago UTC
           keep-at-least: 1
           account-type: personal
