--- a/.github/workflows/image-retention-policy.yml
+++ b/.github/workflows/image-retention-policy.yml
@@ -1,19 +1,19 @@
-name: Delete old container images
+name: Delete old docker-images
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *"  # every day at midnight
+    - cron: '0 0 1 * *'  # every day at midnight
 
 jobs:
   clean-ghcr:
-    name: Delete old unused container images
+    name: Delete old unused docker-images
     runs-on: ubuntu-latest
     steps:
       - name: Delete old sig-images
         uses: snok/container-retention-policy@v1.5.1
         with:
-          image-names: "*sig"
+          image-names: '*sig'
           cut-off: One month ago UTC
           keep-at-least: 1
           account-type: personal
