--- a/.github/workflows/image-retention-policy.yml
+++ b/.github/workflows/image-retention-policy.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete old sig-images
-        uses: snok/container-retention-policy@v1.5.1
+        uses: snok/container-retention-policy@v1.4.2
         with:
           image-names: '*sig'
           cut-off: One month ago UTC
           keep-at-least: 1
           account-type: personal
+          token: ${{ secrets.GITHUB_TOKEN }}
