--- a/.github/workflows/qodana-code-quality.yml
+++ b/.github/workflows/qodana-code-quality.yml
@@ -16,5 +16,7 @@ jobs:
           fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2022.3.4
+        with:
+          pr-mode: false
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
