--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: snok/container-retention-policy@v2
         with:
           image-names: "sha256*"
-          cut-off: 2 month ago UTC
+          cut-off: Two month ago UTC
           account-type: personal
           keep-at-least: 1
           token: ${{ secrets.PAT }}
