--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -18,4 +18,4 @@ jobs:
           cut-off: Two month ago UTC
           account-type: personal
           keep-at-least: 1
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
