--- a/app-src/package.json
+++ b/app-src/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0-beta.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-timeline": "^1.5.3",
     "react-interval": "^2.1.2",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
@@ -24,6 +25,7 @@
     "start-api-mock": "node mock/api/api-mock.js 3001",
     "start-dev-server": "react-scripts start",
     "start": "concurrently \"yarn run start-api-mock\" \"yarn run start-dev-server\"",
+    "format": "prettier --write src/**/*.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -47,7 +49,8 @@
   },
   "devDependencies": {
     "cypress": "^12.6.0",
-    "react-scripts": "^5.0.1",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "prettier": "^3.0.3",
+    "react-scripts": "^5.0.1"
   }
 }
