--- a/app-src/package.json
+++ b/app-src/package.json
@@ -26,6 +26,7 @@
     "start-dev-server": "react-scripts start",
     "start": "concurrently \"yarn run start-api-mock\" \"yarn run start-dev-server\"",
     "format": "prettier --write src/**/*.js",
+    "lint": "eslint src",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -49,6 +50,9 @@
   },
   "devDependencies": {
     "cypress": "^12.6.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "json-server": "^0.17.3",
     "prettier": "^3.0.3",
     "react-scripts": "^5.0.1"
