move all dependencies to devDependencies

--- a/app-src/package.json
+++ b/app-src/package.json
@@ -3,23 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/react": "^18.0.28",
-    "bootstrap": "^5.2.3",
-    "jotai": "^2.2.2",
-    "jotai-location": "^0.5.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0-beta.0",
-    "react-dom": "^18.2.0",
-    "react-horizontal-timeline": "^1.5.3",
-    "react-interval": "^2.1.2",
-    "react-query": "^3.39.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-use-websocket": "^4.3.1"
+
   },
   "scripts": {
     "start-api-mock": "node mock/api/api-mock.js 3001",
@@ -50,6 +34,23 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react": "^18.0.28",
+    "bootstrap": "^5.2.3",
+    "jotai": "^2.2.2",
+    "jotai-location": "^0.5.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0-beta.0",
+    "react-dom": "^18.2.0",
+    "react-horizontal-timeline": "^1.5.3",
+    "react-interval": "^2.1.2",
+    "react-query": "^3.39.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-use-websocket": "^4.3.1",
     "cypress": "^13.3.1",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
