--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Delete 'signature' containers
         uses: snok/container-retention-policy@v2
         with:
-          image-names: "*"
-          filter-tags: "*sha*"
+          image-names: "*sha*"
+          dry-run: true
           cut-off: Two minutes ago UTC
           account-type: personal
           keep-at-least: 1
