--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -14,8 +14,9 @@ jobs:
       - name: Delete 'signature' containers
         uses: snok/container-retention-policy@v2
         with:
-          image-names: "*sha*"
+          image-names: "*"
           dry-run: true
+          untagged-only: true
           cut-off: Two minutes ago UTC
           account-type: personal
           keep-at-least: 1
