--- a/app-src/package.json
+++ b/app-src/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.0.28",
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "cypress": "^13.3.1",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
