add timeline chart for tasks

--- a/app-src/package.json
+++ b/app-src/package.json
@@ -57,6 +57,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react": "^18.0.28",
+    "apexcharts": "^3.44.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
@@ -69,9 +70,9 @@
     "json-server": "^0.17.3",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.0-beta.0",
     "react-dom": "^18.2.0",
-    "react-horizontal-timeline": "^1.5.3",
     "react-interval": "^2.1.2",
     "react-query": "^3.39.3",
     "react-scripts": "^5.0.1",
