--- a/app-src/package.json
+++ b/app-src/package.json
@@ -51,32 +51,32 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/react": "^18.2.37",
-    "apexcharts": "^3.44.0",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.2.3",
+    "@types/react": "^18.2.61",
+    "apexcharts": "^3.46.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
-    "cypress": "^13.5.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jotai": "^2.5.1",
-    "jotai-location": "^0.5.1",
-    "json-server": "^0.17.3",
-    "prettier": "^3.0.3",
+    "cypress": "^13.6.6",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jotai": "^2.7.0",
+    "jotai-location": "^0.5.4",
+    "json-server": "^1.0.0-alpha.23",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-bootstrap": "^2.9.0-beta.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-interval": "^2.1.2",
     "react-query": "^3.39.3",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "react-use-websocket": "^4.3.1"
+    "react-use-websocket": "^4.8.1"
   }
 }
