set open-pull-requests-limit to 25

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,10 +7,12 @@ version: 2
 updates:
   - package-ecosystem: "gomod"
     directory: "/"
+    open-pull-requests-limit: 25
     schedule:
       interval: "daily"
       
   - package-ecosystem: "npm"
     directory: "/app-src"
+    open-pull-requests-limit: 25
     schedule:
       interval: "daily"
