feat: Settings to hide service statuses in the main dashbaord
This adds the posibility of hiding named service statues in the main dashboard which you might find distracting, e.g. 'shutdown'.
This is controlled by the 'DSD_HIDE_SERVICE_STATES' env-variable.

--- a/app-src/package.json
+++ b/app-src/package.json
@@ -2,7 +2,9 @@
   "name": "docker-swarm-dashboard",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.8.1"
+  },
   "scripts": {
     "start-api-mock": "node mock/api/api-mock.js 3001",
     "start-dev-server": "react-scripts start",
