--- a/app-src/package.json
+++ b/app-src/package.json
@@ -2,9 +2,7 @@
   "name": "docker-swarm-dashboard",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "prop-types": "^15.8.1"
-  },
+  "dependencies": {},
   "scripts": {
     "start-api-mock": "node mock/api/api-mock.js 3001",
     "start-dev-server": "react-scripts start",
@@ -71,6 +69,7 @@
     "jotai-location": "^0.5.4",
     "json-server": "^0.17.3",
     "prettier": "^3.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
