--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,11 +8,19 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/"
     open-pull-requests-limit: 25
+    labels:
+      - "dependencies"
+      - "go"
+      - "automatic-merge"
     schedule:
       interval: "daily"
       
   - package-ecosystem: "npm"
     directory: "/app-src"
     open-pull-requests-limit: 25
+    labels:
+      - "dependencies"
+      - "javascript"
+      - "automatic-merge"
     schedule:
       interval: "daily"
