--- a/.github/workflows/automatic-merge.yml
+++ b/.github/workflows/automatic-merge.yml
@@ -11,6 +11,7 @@ jobs:
 
     steps:
       - name: Check if Depandabot and has label
+        id: check_conditions
         uses: actions/github-script@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -19,15 +20,16 @@ jobs:
             const labels = pr.labels.map(label => label.name);
             if (pr.user.login === 'dependabot[bot]' && labels.includes('automatic-merge')) {
               console.log('Depandabot pull request with automatic-merge label detected.');
-              process.exit(0);
+              console.log('::set-output name=should_merge::true');
             } else {
               console.log('Not a Depandabot pull request with automatic-merge label. Exiting.');
-              process.exit(1);
+              console.log('::set-output name=should_merge::false');
             }
 
       - name: Merge Pull Request
+        if: steps.check_conditions.outputs.should_merge == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
+          PR_URL="${{ github.event.pull_request.html_url }}"
           gh pr merge --merge --auto "$PR_URL"
