--- a/app-src/package.json
+++ b/app-src/package.json
@@ -67,7 +67,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jotai": "^2.10.3",
     "jotai-location": "^0.5.5",
-    "json-server": "^0.17.3",
+    "json-server": "^1.0.0-beta.3",
     "prettier": "^3.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
