--- a/app-src/package.json
+++ b/app-src/package.json
@@ -5,8 +5,9 @@
   "dependencies": {},
   "scripts": {
     "start-api-mock": "node mock/api/api-mock.js 3001",
-    "start-dev-server": "BROWSER=http://localhost:3000#base=\"http%3A%2F%2Flocalhost%3A3001%2F\" react-scripts start",
-    "start": "concurrently \"yarn run start-api-mock\" \"yarn run start-dev-server\"",
+    "start-dev-server": "BROWSER=none react-scripts start",
+    "open-browser": "open http://localhost:3000#base=\"http%3A%2F%2Flocalhost%3A3001%2F\"",
+    "start": "concurrently \"yarn run start-api-mock\" \"yarn run start-dev-server\" \"sleep 2 && yarn run open-browser\"",
     "format": "prettier --write src/**/*.js",
     "postinstall": "node download-files.js",
     "lint": "eslint src",
