--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,12 +47,9 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3.7.0
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v3.6.1
+      #- name: Setup Docker buildx
+      #  uses: docker/setup-buildx-action@v3.6.1
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
@@ -94,7 +91,6 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          platforms: ${{ matrix.platform }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
