add Dependabot for GitHub Actions version updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -34,3 +34,8 @@ updates:
       - "automatic-merge"
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
