--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -41,16 +41,46 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      # Install dependencies for browser installation
+      - name: Install APT dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg ca-certificates
+
+      # Add Google Chrome APT source and install Chrome
+      - name: Install Chrome
+        if: matrix.browser == 'chrome'
+        run: |
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          google-chrome --version
+
+      # Add Microsoft Edge APT source and install Edge
+      - name: Install Edge
+        if: matrix.browser == 'edge'
+        run: |
+          wget -q -O - https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" | sudo tee /etc/apt/sources.list.d/microsoft-edge.list
+          sudo apt-get update
+          sudo apt-get install -y microsoft-edge-stable
+          microsoft-edge --version
+
       # Install global dependencies
       - name: Install global dependencies
         run: yarn global add concurrently
+
+      # Update browserslist database
+      - name: Update browserslist
+        run: npx update-browserslist-db@latest
 
       # Run Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           working-directory: ${{ env.WORKING_DIRECTORY }}
-          start: yarn run start
+          start: yarn run start-api-mock && yarn run start-dev-server
           install-command: yarn --frozen-lockfile
           command: yarn run cy:run --browser ${{ matrix.browser }}
           wait-on: 'http://localhost:3000'
